버그 일부 제거, 코드스멜 제거, 코드 개선
버그 일부 제거, 코드스멜 제거, 코드 개선